<resources>
    <string name="app_name">Dzikr</string>
    <string name="txt_salam">Assalamualaikum,</string>
    <string name="txt_welcome">Sudah dzikir hari ini?</string>
    <string name="txt_judul_fitur_dzikir">Dzikir Sehari-hari</string>
    <string name="txt_judul_fitur_artikel">Artikel Terbaru</string>
    <string name="txt_bacaan_shalat">Bacaan Shalat</string>
    <string name="txt_dzikir_setiap_saat">Setiap Saat</string>
    <string name="txt_dzikir_doa_harian">Doa Harian</string>
    <string name="txt_dzikir_pagi_petang"><![CDATA[Pagi & Petang]]></string>
    <string name="txt_basmalah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيم</string>
    <string name="txt_artikel_islami">Artikel Islami</string>
    <string name="txt_dzikir_pagi">Dzikir Pagi</string>
    <string name="txt_dzikir_petang">Dzikir Petang</string>
    <string name="content_txt_icon_dzikir_pagi_petang">Icon Dzikir Pagi Petang</string>
    <string name="content_txt_icon_dzikir_doa_harian">Icon Dzikir Doa Harian</string>
    <string name="content_txt_icon_dzikir_setiap_saat">Icon Dzikir Setiap Saat</string>
    <string name="content_txt_icon_qauliyah_shalat">Icon Qauliyah Shalat</string>
    <string name="content_txt_icon_btn_dzikir_pagi">Icon btn dzikir Pagi</string>
    <string name="content_txt_icon_btn_dzikir_petang">Icon btn Dzikir Petang</string>
    <string name="content_txt_icon_image_for_background_dzikir">Icon image for Background Dzikir</string>
    <string name="content_txt_image_artikel">Image Poster Detail Artikel</string>
    <string-array name="arr_img_artikel">
        <item>@drawable/artikel_1</item>
        <item>@drawable/artikel_2</item>
        <item>@drawable/artikel_3</item>
        <item>@drawable/artikel_4</item>
    </string-array>
    <string-array name="arr_title_artikel">
        <item>Keutamaan berdzikir</item>
        <item>Keutamaan berdzikir</item>
        <item>Keutamaan berdzikir</item>
        <item>Keutamaan berdzikir</item>
    </string-array>
    <string-array name="arr_desc_artikel">
        <item>Ada 51 keutamaan dzikir, diantaranya adalah meraih apa yang Allah sebutkan dalam ayat 152 surah al-Baqarah. Untuk informasi lebih lanjut kunjungi https://rumaysho.com/1596-51-keutamaan-dzikir.html</item>
        <item>Ada 51 keutamaan dzikir, diantaranya adalah yang perkataan diucapkan oleh Syaikhul Islam Ibnu Taimiyah. Untuk informasi lebih lanjut kunjungi https://rumaysho.com/1596-51-keutamaan-dzikir.html</item>
        <item>Ada 51 keutamaan dzikir, diantaranya adalah dengan senantiasa berdzikir kepada Allah, seseorang tidak mungkin melupakan-Nya. Untuk informasi lebih lanjut kunjungi https://rumaysho.com/1596-51-keutamaan-dzikir.html</item>
        <item>Ada 51 keutamaan dzikir, diantaranya adalah mendekatkan seorang hamba dengan Allah. Untuk informasi lebih lanjut kunjungi https://rumaysho.com/1596-51-keutamaan-dzikir.html</item>
    </string-array>
    <string-array name="arr_dzikir_doa_harian">
        <item>Sebelum tidur</item>
        <item>Ketika mimpi buruk</item>
        <item>Bangun tidur</item>
        <item>Masuk WC/kamar mandi</item>
        <item>Keluar WC/kamar mandi</item>
        <item>Sebelum wudhu</item>
        <item>Setelah wudhu</item>
        <item>Mengenakan pakaian</item>
        <item>Melepas pakaian</item>
        <item>Keluar rumah</item>
        <item>Masuk rumah</item>
        <item>Pergi ke Masjid</item>
        <item>Masuk ke Masjid</item>
        <item>Keluar dari Masjid</item>
        <item>Ketika mendengar Adzan</item>
        <item>Setelah adzan</item>
        <item>Bersin</item>
        <item>Kepada orang yang berbuat baik kepadamu</item>
        <item>Ketika marah</item>
    </string-array>
    <string-array name="arr_lafaz_dzikir_doa_harian">
        <item>Mengumpulkan dua telapak tangan, lalu ditiup dan dibacakan:\n\nSurat Al-Ikhlas:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ هُوَ اللَّهُ أَحَدٌ ﴿١﴾ اللَّهُ الصَّمَدُ ﴿٢﴾ لَمْ يَلِدْ وَلَمْ يُولَدْ ﴿٣﴾ وَلَمْ يَكُنْ لَهُ كُفُوًا أَحَدٌ ﴿٤﴾ \n\nSurat Al-Falaq:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ اَعُوْذُ بِرَبِّ الْفَلَقِۙ ﴿١﴾ مِنْ شَرِّ مَا خَلَقَۙ ﴿٢﴾ وَمِنْ شَرِّ غَاسِقٍ اِذَا وَقَبَۙ ﴿٣﴾ وَمِنْ شَرِّ النَّفّٰثٰتِ فِى الْعُقَدِۙ ﴿٤﴾ وَمِنْ شَرِّ حَاسِدٍ اِذَا حَسَدَ ﴿٥﴾ \n\nAn-Naas:\nبِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ \nقُلْ اَعُوْذُ بِرَبِّ النَّاسِۙ ﴿١﴾ مَلِكِ النَّاسِۙ ﴿٢﴾ اِلٰهِ النَّاسِۙ ﴿٣﴾ مِنْ شَرِّ الْوَسْوَاسِ ەۙ الْخَنَّاسِۖ ﴿٤﴾ الَّذِيْ يُوَسْوِسُ فِيْ صُدُوْرِ النَّاسِۙ ﴿٥﴾ مِنَ الْجِنَّةِ وَالنَّاسِ ﴿٦﴾\nAyat Kursi:\nٱللَّهُ لَآ إِلَٰهَ إِلَّا هُوَ ٱلْحَىُّ ٱلْقَيُّومُ ۚ لَا تَأْخُذُهُۥ سِنَةٌ وَلَا نَوْمٌ ۚ لَّهُۥ مَا فِى ٱلسَّمَٰوَٰتِ وَمَا فِى ٱلْأَرْضِ ۗ مَن ذَا ٱلَّذِى يَشْفَعُ عِندَهُۥٓ إِلَّا بِإِذْنِهِۦ ۚ يَعْلَمُ مَا بَيْنَ أَيْدِيهِمْ وَمَا خَلْفَهُمْ ۖ وَلَا يُحِيطُونَ بِشَىْءٍ مِّنْ عِلْمِهِۦٓ إِلَّا بِمَا شَآءَ ۚ وَسِعَ كُرْسِيُّهُ ٱلسَّمَٰوَٰتِ وَٱلْأَرْضَ ۖ وَلَا يَـُٔودُهُۥ حِفْظُهُمَا ۚ وَهُوَ ٱلْعَلِىُّ ٱلْعَظِيمُ\nKetika sudah berbaring baca doa:\nاَللَّهُمَّ أَسْلَمْتُ نَفْسِيْ إِلَيْكَ، وَفَوَّضْتُ أَمْرِيْ إِلَيْكَ، وَوَجَّهْتُ وَجْهِيَ إِلَيْكَ، وَأَلْجَأْتُ ظَهْرِيْ إِلَيْكَ، رَغْبَةً وَرَهْبَةً إِلَيْكَ، لاَ مَلْجَأَ وَلاَ مَنْجَا مِنْكَ إِلاَّ إِلَيْكَ، آمَنْتُ بِكِتَابِكَ الَّذِيْ أَنْزَلْتَ وَبِنَبِيِّكَ الَّذِيْ أَرْسَلْتَ\n\nبِاسْمِكَ رَبِّيْ وَضَعْتُ جَنْبِيْ، وَبِكَ أَرْفَعُهُ، فَإِنْ أَمْسَكْتَ نَفْسِيْ فَارْحَمْهَا، وَإِنْ أَرْسَلْتَهَا فَاحْفَظْهَا بِمَا تَحْفَظُ بِهِ عِبَادَكَ الصَّالِحِيْنَ</item>
        <item>Membaca isti\'adzah:\nأَعُوذُ بِاَللَّهِ مِنَ الشَّيْطَانِ الرَّجِيمِْ\nlalu meludah tipis (meniup disertai sedikit liur) ke sebelah kirinya sebanyak tiga kali.\nDemikian juga merubah posisi tidur. Bahkan dianjurkan untuk bangun dan shalat.</item>
        <item>الحَمْدُ ِللهِ الَّذِي أَحْيَاناَ بَعْدَ مَا أَمَاتَنَا وَ إِلَيْهِ النُّشُوْرُ</item>
        <item>اللَّهُمَّ إِنِّى أَعُوذُ بِكَ مِنَ الْخُبُثِ وَالْخَبَائِثِ</item>
        <item>غُفْرَانَكَ</item>
        <item>بسم الله</item>
        <item>Pertama:\nأَشْهَدُ أَنْ لاَ إِلهَ إِلاَّ اللهُ وَحْدَهُ لاَ شَرِيْكَ لَهُ وَأَشْهَدُ أَنَّ مُحَمَّدًا عَبْدُهُ وَرَسُوْلُهُ\n\nKedua:\nسُبْحَانَكَ اللَّهُمَّ وَبِحَمْدِكَ، أَشْهَدُ أَنْ لاَ إِلَـهَ إِلاَّ أَنْتَ، أَسْتَغْفِرُكَ وَأَتُوْبُ إِلَيْكَ</item>
        <item>اَلْحَمْدُ لِلَّهِ الَّذِيْ كَسَانِيْ هَذَا الثَّوْبَ وَرَزَقَنِيْهِ مِنْ غَيْرِ حَوْلٍ مِنِّيْ وَلَا قُوَّةٍ</item>
        <item>بسم الله</item>
        <item>بِسْمِ اللهِ تَوَكَّلْتُ عَلَى اللهِ لَا حَوْلَ وَلَا قُوَّةَ إِلَّا بِاللهِ</item>
        <item>Pertama:\nبسم الله\n\Kedua:\nالسلام عليكم</item>
        <item>اللّهُمَّ اجْعَلْ فِي قَلْبِيْ نُوْراً، وَفِي لِسَانِي نُوْراً، وَاجْعَلْ وَفِي سَمْعِي نُوْراً، وَاجْعَلْ فِي بَصَرِي نُوْراً، وَاجْعَلْ مِنْ خَلْفِي نُوْراً، وَمِنْ أَمَامِي نُوْراً، وَاجْعَلْ مِنْ فَوْقِي نُوْراً، وَمِنْ تَحْتِي نُوْراً، اللّهُمَّ أَعْطِنِي نُوْراً</item>
        <item>Pertama:\nاللَّهُمَّ افْتَحْ لِي أَبْوَابَ رَحْمَتِكَ\n\nKedua:\nوَالصَّلَاةُ وَالسَّلاَمُ عَلَى رَسُولِ اللهِ اللَّهُمَّ افْتَحْ لِي أَبْوَابَ رَحْمَتِكَ\n\nKetiga:\nأَعُوذُ بِاللَّهِ الْعَظِيمِ، وَبِوَجْهِهِ الْكَرِيمِ، وَسُلْطَانِهِ الْقَدِيمِ، مِنَ الشَّيْطَانِ الرَّجِيمِ</item>
        <item>اللَّهُمَّ إِنِّيْ أَسْأَلُكَ مِنْ فَضْلِكَ</item>
        <item>Seseorang yang mendengarkan adzan, hendaklah mengucapkan sebagaimana yang diucapkan oleh muadzin, kecuali dalam kalimat:\nHayya \'alash shalaah\n\ndan\n\nHayya \'alal falaah. Maka mengucapkan:\nلاحول ولا قوة الا بالله</item>
        <item>اللَّهُمَّ رَبَّ هَذِهِ الدَّعْوَةِ التَّامَّةِ ، وَالصَّلاَةِ القَائِمَةِ آتِ مُحَمَّدًا الوَسِيلَةَ وَالفَضِيلَةَ، وَابْعَثْهُ مَقَامًا مَحْمُودًا الَّذِي وَعَدْتَهُ</item>
        <item>Yang bersin mengucapkan:\nالحمد لله\nYang mendengar hamdalah mengucapkan:\nيَرْحَمُكَ اللهُ\nBila teman atau saudaranya mengucapkan (yarhamukallah), maka yang bersin membalas dengan:\nيَهْدِيْكُمُ اللهُ وَيُصْلِحُ بَالَكُمْ</item>
        <item>جزاك الله خيراً</item>
        <item>أَعُوذُ بِاللَّهِ مِنَ الشَّيْطَانِ الرَّجِيمِ</item>
    </string-array>
</resources>