<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dzikir"
        android:background="@color/primary"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/bg_dashboard_menu"
                android:elevation="16dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_salam"
                    android:textColor="@color/primary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_welcome"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fitur_doa_artikel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_judul_fitur_artikel"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_artikel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp" />

                <LinearLayout
                    android:id="@+id/ll_slider_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_fitur_doa_dzikir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_judul_fitur_dzikir"
                    android:textColor="@color/primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <!--end section judul-->

                <!--section sunnah qauliyah-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_sunnah_qauliyah"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_dashboard_menu"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_dzikir_qauliyah" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_bacaan_shalat"
                            android:textAlignment="center"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dzikir_setiap_saat"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_dashboard_menu"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="TextSizeCheck">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_dzikir_setiap_saat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_dzikir_setiap_saat"
                            android:textAlignment="center"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dzikir_doa_harian"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_dashboard_menu"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_dzikir_harian" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/txt_dzikir_doa_harian"
                            android:textAlignment="center"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_dzikir_pagi_petang"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/bg_dashboard_menu"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="TextSizeCheck">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginBottom="16dp"
                            android:src="@drawable/ic_dzikir_pagi_petang" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/txt_dzikir_pagi_petang"
                            android:textAlignment="center"
                            android:textColor="@color/primary"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--end section artikel-->

            <!--section judul-->

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>